--- a/index.html
+++ b/index.html
@@ -22,28 +22,31 @@
         <div class="container">
           <header class="header">
             <a href="index.html">
-              <h1><img src="./image/logo.png" alt="ACHA MOVIES" />ACHA MOVIES</h1>
+              <h1><img src="./image/logo.png" alt="ACHA MOVIES" /><span class="pc">ACHA MOVIES</span></h1>
             </a>
             <div class="form">
               <form id="search" class="search-form">
                 <fieldset>
                   <legend>제목</legend>
-                  <div class="selDiv">
-                    <div class="selectType">
-                      <label for="movieType" class="a11y-hidden">유형</label>
-                      <select name="" id="movieType">
-                        <option value="movie">movie</option>
-                        <option value="series">series</option>
-                        <option value="episode">episode</option>
-                      </select>
-                    </div>
-                    <div class="dateSch">
-                      <label for="releaseYear" class="a11y-hidden">개봉 연도</label>
-                      <input type="number" id="releaseYear" placeholder="연도 (YYYY)" min="1900" max="2099" />
-                    </div>
-                    <div class="searchDiv">
-                      <input type="text" name="" id="" placeholder="영화 제목을 검색하세요." />
-                      <button type="submit">검색</button>
+                  <div class="s-box">
+                    <div class="m-search mobile"></div>
+                    <div class="sel-div">
+                      <div class="select-type">
+                        <label for="movieType" class="a11y-hidden">유형</label>
+                        <select name="" id="movieType">
+                          <option value="movie">movie</option>
+                          <option value="series">series</option>
+                          <option value="episode">episode</option>
+                        </select>
+                      </div>
+                      <div class="date-sch">
+                        <label for="releaseYear" class="a11y-hidden">개봉 연도</label>
+                        <input type="number" id="releaseYear" placeholder="연도 (YYYY)" min="1900" max="2099" />
+                      </div>
+                      <div class="search-div">
+                        <input type="text" name="" id="" placeholder="영화 제목을 검색하세요." />
+                        <button class="pc" type="submit">검색</button>
+                      </div>
                     </div>
                   </div>
                 </fieldset>
