--- a/likeList.html
+++ b/likeList.html
@@ -8,17 +8,14 @@
     <script type="module" src="./js/global.js"></script>
   </head>
   <body>
-    <div id="detailWrap">
+    <div id="likeWrap">
       <div class="container">
-        <header class="header-container">
-          <!-- include -->
-        </header>
-        <section class="movie-detail-section mt44">
-          <ul class="movie-details"></ul>
+        <header class="header-container"><!-- include --></header>
+        <section class="movie-like-section mt44">
+          <p class="saved-title">찜한 영화</p>
+          <ul class="like-list"></ul>
         </section>
-        <footer class="footer-container">
-          <!-- include -->
-        </footer>
+        <footer class="footer-container"><!-- include --></footer>
       </div>
     </div>
   </body>
