--- a/common_html/footer.html
+++ b/common_html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<div class="footer">
   <div class="f-logo">
     <img src="./image/logo.png" alt="ACHA MOVIES" />
     <span>ACHA MOVIES</span>
@@ -8,4 +8,4 @@
     <li>서울시 강남구 역삼로</li>
     <li>고객센터 : 2018-0303</li>
   </ul>
-</footer>
+</div>
